# docker-profiler

./: README.md  pyproject.toml
docker_profiler/: __init__.py  cli.py  collector.py  graph.py
tests/: test_graph.py
