[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-profiler"
version = "0.1.0"
description = "Visualize Docker container resources with ASCII graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takawasi" }
]
keywords = ["docker", "monitoring", "profiler", "ascii", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
docker-profiler = "docker_profiler.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/docker-profiler"
Repository = "https://github.com/takawasi/docker-profiler"

[tool.hatch.build.targets.wheel]
packages = ["docker_profiler"]
